<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ForumFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->


    <Button
        android:id="@+id/community_forum_btn"
        android:layout_width="200dp"
        android:layout_height="62dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:text="@string/community_forum"
        android:backgroundTint="#ff004d40"
        android:onClick="btnCommunityForumOnClick"
        />

    <Button
        android:id="@+id/discussion_groups_btn"
        android:layout_width="200dp"
        android:layout_height="62dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:backgroundTint="#FF26A69A"
        android:onClick="btnDiscussionGroupsOnClick"
        android:text="@string/discussion_group" />

    <Button
        android:id="@+id/counsellor_contact_btn"
        android:layout_width="200dp"
        android:layout_height="62dp"
        android:layout_marginTop="30dp"
        android:text="@string/counsellor_contact"
        android:layout_gravity="center"
        android:backgroundTint="#ff004d40"
        android:onClick="btnCounsellorContacts"
         />

    <Button
        android:id="@+id/search_friend_btn"
        android:layout_width="200dp"
        android:layout_height="62dp"
        android:layout_marginTop="30dp"
        android:text="@string/search_for_friends"
        android:layout_gravity="center"
        android:backgroundTint="#FF26A69A"



        />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/NHFMain"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:defaultNavHost="true"
        android:visibility="gone"
        app:navGraph="@navigation/nav_fragment"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="4dp" />

</LinearLayout>